<resources>
    <string name="app_name" translatable="false">AtRadio</string>
    <string name="at_radio" translatable="false">\@Radio</string>

    <string name="screensaver_protect_display_settings">ScreenSaver(restart required)</string>
    <string name="enable_autoplay_settings">Enable Autoplay</string>
    <string name="invalid_url_message">Please enter the correct URL</string>
    <string name="empty_fields_message">Enter the name and URL of the radio station</string>
    <string name="radio_station_added">Radio station added</string>
    <string name="file_no_new_stations">File does not contain new stations</string>
    <string name="radio_stations_imported">Radio stations imported</string>
    <string name="radio_deletion_title">Radio deletion</string>
    <string name="radio_deletion_message">Are you sure you want to delete this station?</string>
    <string name="delete">Delete</string>
    <string name="share_radio_stations">Share Radio Stations</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="incorrect_data">Incorrect data in line: %1$s</string>
    <string name="incorrect_line">Incorrect line: %1$s</string>
    <string name="error_reading_file">Error while reading file</string>
    <string name="dialog_title">Information</string>
    <string name="dialog_message">You need to restart the application to apply the settings.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="empty_list_stations">Empty list stations</string>
    <string name="error_playing_station">Error playing station</string>
    <string name="error_message">Error: </string>
    <string name="save_favorite_message">Save current station as favorite</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="station_saved_to_favorite">Station saved to favorite</string>
    <string name="no_station_saved_to_favorite">No station saved to favorite</string>
    <string name="add">Add</string>
    <string name="share">Share</string>
    <string name="import_str">Import</string>
    <string name="back">Back</string>
    <string name="autoplay_last_station">Autoplay Last Station</string>
    <string name="enable_screensaver">Enable ScreenSaver</string>
    <string name="reset_all_settings">Reset All Settings</string>
    <string name="play_stop">Play/Stop</string>
    <string name="vol_plus" translatable="false">VOL+</string>
    <string name="vol_minus" translatable="false">VOL-</string>
    <string name="prev" translatable="false">PREV</string>
    <string name="forward" translatable="false">FORW</string>
    <string name="favorite_3">Favorite 3</string>
    <string name="favorite_2">Favorite 2</string>
    <string name="favorite_1">Favorite 1</string>
    <string name="list">list</string>
    <string name="settings">settings</string>
    <string name="radio_station_name">Radio Station Name</string>
    <string name="name_station">Name station</string>
    <string name="url_station">URL station</string>
    <string name="language">Language</string>
    <string name="slogan">All the world\'s radio — right in your pocket</string>
    <string name="save_station_favorite">Station saved to favorite</string>
    <string name="title_showPermissionRationaleDialog">Notification Permission Required</string>
    <string name="message_showPermissionRationaleDialog">This app needs notification permission to keep you updated about the radio playback</string>
    <string name="positive_showPermissionRationaleDialog">Grant Permission</string>
    <string name="title_showPermissionDeniedDialog">Permission Denied</string>
    <string name="message_showPermissionDeniedDialog">Without notification permission, you won\'t receive updates about the radio playback. You can grant this permission in the app settings.</string>
    <string name="positive_showPermissionDeniedDialog">Open Settings</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="text_preparing">Preparation</string>
    <string name="close">Close</string>
    <string name="error_play_code">Playback error: code</string>
    <string name="error_init_mediaplayer">Error initializing MediaPlayer</string>
    <string name="category_tatar">Tatar music</string>
    <string name="category_classic">Classical music</string>
    <string name="category_retro">Retro music</string>
    <string name="category_russian">Russian music</string>
    <string name="category_other">Other</string>
    <string name="choose_category">Select station genres</string>

    <string name="help_player_control_title">Player Control</string>
    <string name="help_player_control_description">Starts playing the current station</string>

    <string name="help_prev_station_title">Player Control</string>
    <string name="help_prev_station_description">Starts the previous station</string>

    <string name="help_next_station_title">Player Control</string>
    <string name="help_next_station_description">Starts the next station</string>

    <string name="help_volume_control_title">Volume Control</string>
    <string name="help_volume_control_description">Controls the playback volume</string>

    <string name="help_station_name_title">Station Name</string>
    <string name="help_station_name_description">Displays the name of the current station</string>

    <string name="help_favorite_station_title">Favorite Stations</string>
    <string name="help_favorite_station_description">Long press to save the current station. Short press to play the saved favorite station</string>
    <string name="help_list_station_title">Station List</string>
    <string name="help_list_station_description">Here is the list of stations. You can start from the list, add, delete, save, and load stations.</string>
    <string name="help_settings_title">Settings</string>
    <string name="help_settings_description">You can change the app settings here</string>


    <string name="help_add_station_title">Add Stations</string>
    <string name="help_add_station_description">You can add radio stations if you know the audio stream link</string>

    <string name="help_save_share_title">Save Station List</string>
    <string name="help_save_share_description">You can back up your stations and share the station list with friends</string>

    <string name="help_import_title">Import Station List</string>
    <string name="help_import_description">Here you can import stations into the app from a backup</string>

    <string name="help_back_title">Back to Main Window</string>
    <string name="help_back_description">Here you can return to the main app window and save changes</string>

    <string name="help_list_stations_title">Station List</string>
    <string name="help_list_stations_description">This is your list of stations. If you tap a selected station, the station will start playing. You can also remove a selected station using the cross next to it.</string>
    <string name="github_atradio" translatable="false">GitHub AtRadio</string>
    <string name="email" translatable="false">Email</string>
    <string name="donate" translatable="false">Donate</string>
    <string name="about" translatable="false">About</string>
    <string name="choose_email_clients">Select a mail client</string>
    <string name="aboutTitle">About</string>
    <string name="aboutDialogAlert" >AtRadio was created for listening to online radio stations.\n\n\"All the radio in the world — in your pocket\"\n\nVersion:</string>
    <string name="aboutAuthor" translatable="false">Ilnur Saifutdinov\n(c) 2024</string>
    <string name="linkGitHub" translatable="false">https://github.com/kaefik/AtRadio</string>
    <string name="emailAuthor" translatable="false">ilnursoft@gmail.com</string>
    <string name="linkDonate" translatable="false">https://www.donationalerts.com/r/iamatai</string>
    <string name="reset_stations">Reset the station list</string>
    <string name="title_import_file">Loading the station list from a file</string>
    <string name="replace">Replace</string>
    <string name="enableFullScreenApp">Enable fullscreen mode</string>
    <string name="find_station">Find the station</string>

</resources>