<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button_previous"
        android:layout_centerVertical="true"/>


    <ImageView
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/button_play_stop"
        android:contentDescription="@string/prev"
        android:src="@drawable/back_24" />

    <ImageView
        android:id="@+id/button_play_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/button_next"
        android:contentDescription="@string/play_stop"
        android:src="@drawable/play3_24" />

    <ImageView
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/forward"
        android:layout_toStartOf="@+id/button_close"
        android:src="@drawable/forward_24s" />

    <ImageView
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/close"
        android:src="@drawable/close2_24" />


</RelativeLayout>
